// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalMessage correctly handles a primaryButton prop 1`] = `
<MessageWrapper
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-modal-dialog"
  >
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "uri": "close",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "auto",
          "paddingBottom": 4,
          "paddingHorizontal": 4,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "hsl(210, 10%, 58%)",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            undefined,
            [
              {},
              {
                "backgroundColor": "#e8e8e8",
                "borderRadius": 4,
                "flex": 1,
                "margin": 8,
                "padding": 12,
              },
              {},
              {},
            ],
          ]
        }
        testID="in-app-messaging--primary-button"
      >
        <Text
          style={
            [
              {
                "color": "hsl(210, 50%, 10%)",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "center",
              },
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {},
                {},
              ],
            ]
          }
        >
          primary button
        </Text>
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`ModalMessage correctly handles a secondaryButton prop 1`] = `
<MessageWrapper
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-modal-dialog"
  >
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "uri": "close",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "auto",
          "paddingBottom": 4,
          "paddingHorizontal": 4,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "hsl(210, 10%, 58%)",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            undefined,
            [
              {},
              {
                "backgroundColor": "#e8e8e8",
                "borderRadius": 4,
                "flex": 1,
                "margin": 8,
                "padding": 12,
              },
              {},
              {},
            ],
          ]
        }
        testID="in-app-messaging--secondary-button"
      >
        <Text
          style={
            [
              {
                "color": "hsl(210, 50%, 10%)",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "center",
              },
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {},
                {},
              ],
            ]
          }
        >
          secondary button
        </Text>
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`ModalMessage renders a message as expected with an image 1`] = `
<MessageWrapper
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-modal-dialog"
  >
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "uri": "close",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "margin": 12,
          }
        }
      >
        <Image
          source={
            {
              "uri": "asset.png",
            }
          }
          style={
            [
              {
                "height": 100,
                "width": 100,
              },
              undefined,
            ]
          }
          testID="in-app-messaging--image"
        />
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      />
    </View>
  </View>
</MessageWrapper>
`;

exports[`ModalMessage renders as expected in landscape mode 1`] = `
<MessageWrapper
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "flex": 1,
          "margin": 16,
          "padding": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-modal-dialog"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
                "marginRight": 8,
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "uri": "close",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`ModalMessage renders as expected in portrait mode 1`] = `
<MessageWrapper
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "minHeight": "40%",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-modal-dialog"
  >
    <View
      style={
        {
          "padding": 12,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "uri": "close",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      />
    </View>
  </View>
</MessageWrapper>
`;
